tests/remap/fail/epilog/mustbecalled.ngc
o<mustbecalled>sub
(debug, I should complain if I were'nt called but I guess I cant do that)
o<mustbecalled>endsub
m2
